<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Biodata">

    <EditText
        android:id="@+id/input_nama"
        android:layout_width="374dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contoh_budi"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/input_umur"
        android:layout_width="374dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="156dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contoh_12"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:text="@string/umur_kamu"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_nama" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="101dp"
        android:text="@string/nama_panggilan_kamu"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selanjutnya"
        android:layout_width="254dp"
        android:layout_height="53dp"
        android:layout_marginStart="76dp"
        android:background="@drawable/button_kuning"
        android:fontFamily="sans-serif-black"
        android:text="@string/selanjutnya"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_umur"
        app:layout_constraintVertical_bias="0.799" />

</android.support.constraint.ConstraintLayout>